# KIV-RTOS-ROS

sources/: build.sh  build_vsechno.sh  imgui.ini  peripherals.json
sources/kernel/include/drivers/: a810_bubble_sensor.h  ads1115_pbmh.h  bq25120a.h  cgm_sensor.h  ds3231.h  i2c.h  max6864.h  mcp9808.h  monitor.h  pca9685_mg996r.h
sources/kernel/include/fs/: filesystem.h
sources/kernel/include/process/: pipe.h  process.h  swi.h
sources/kernel/src/: initsys.cpp  main.cpp  test_processes.cpp
sources/kernel/src/drivers/: a810_bubble_sensor.cpp  ads1115_pbmh.cpp  bq25120a.cpp  cgm_sensor.cpp  ds3231.cpp  gpio.cpp  i2c.cpp  max6864.cpp  mcp9808.cpp  (+2 more)
sources/stdlib/include/: stdfile.h  stdstring.h
sources/stdlib/src/: stdfile.cpp  stdstring.cpp
sources/stdutils/include/: air_in_line.h  battery_system.h  cgm.h  monitor.h  motor.h  oled.h  pressure.h  rtc.h  temperature.h  wdt.h
sources/stdutils/src/: air_in_line.cpp  battery_system.cpp  cgm.cpp  monitor.cpp  motor.cpp  oled.cpp  pressure.cpp  rtc.cpp  temperature.cpp  wdt.cpp
sources/userspace/: .clang-format  .gitignore  CMakeLists.txt  build.sh  log.txt
sources/userspace/counter_task/: main.cpp
sources/userspace/insulin_pump/: CMakeLists.txt  build.sh
sources/userspace/insulin_pump/include/insulin_pump/: external_peripheral.hpp
sources/userspace/insulin_pump/include/insulin_pump/basal/: basal_profile.hpp
sources/userspace/insulin_pump/include/insulin_pump/cgm_sensor/: cgm_sensor.hpp
sources/userspace/insulin_pump/include/insulin_pump/definitions/: definitions.hpp
sources/userspace/insulin_pump/include/insulin_pump/insulin_pump/: insulin_pump.hpp
sources/userspace/insulin_pump/include/insulin_pump/motor/: motor.hpp
sources/userspace/insulin_pump/include/insulin_pump/pid_regulator/: pid_regulator.hpp
sources/userspace/insulin_pump/include/insulin_pump/pump_settings/: pump_settings.hpp
sources/userspace/insulin_pump/include/insulin_pump/user_interface/: user_interface.hpp  zero_mate_user_interface.hpp
sources/userspace/insulin_pump/include/math/: math.hpp
sources/userspace/insulin_pump/include/utils/logger/: logger.hpp
sources/userspace/insulin_pump/src/: CMakeLists.txt  main.cpp
sources/userspace/insulin_pump/src/insulin_pump/air_in_line/: air_in_line_task.cpp
sources/userspace/insulin_pump/src/insulin_pump/basal/: basal_profile.cpp
sources/userspace/insulin_pump/src/insulin_pump/cgm_sensor/: cgm_sensor.cpp
sources/userspace/insulin_pump/src/insulin_pump/insulin_pump/: insulin_pump.cpp
sources/userspace/insulin_pump/src/insulin_pump/insulin_pump/control_tasks/: hw_control_task.cpp  sw_control_task.cpp
sources/userspace/insulin_pump/src/insulin_pump/motor/: motor.cpp
sources/userspace/insulin_pump/src/insulin_pump/pid_regulator/: pid_regulator.cpp
sources/userspace/insulin_pump/src/insulin_pump/pump_settings/: pump_settings.cpp
sources/userspace/insulin_pump/src/insulin_pump/user_interface/: display_task.cpp  io_task.cpp  zero_mate_user_interface.cpp
sources/userspace/insulin_pump/src/math/: math.cpp
sources/userspace/insulin_pump/src/utils/logger/: logger.cpp  logger_task.cpp
sources/userspace/insulin_pump/tests/insulin_pump/pid_regulator/: pid_regulator_test.cpp
sources/userspace/logger_task/: main.cpp
sources/userspace/oled_task/: main.cpp
sources/userspace/sos_task/: main.cpp
sources/userspace/stdlib/: Makefile  cmake_install.cmake
sources/userspace/tilt_task/: main.cpp
(+22 files in other folders)
